refactor: MediaType 으로 수정